--- a/package.json
+++ b/package.json
@@ -4,5 +4,6 @@
   "description": "Route your log messages to a PostgreSQL database.",
   "main": "index.js",
   "author": "Tim Douglas <neurotech@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "repository": "https://github.com/neurotech/micrologger.git"
 }
