--- a/package.json
+++ b/package.json
@@ -5,5 +5,16 @@
   "main": "index.js",
   "author": "Tim Douglas <neurotech@gmail.com>",
   "license": "MIT",
-  "repository": "https://github.com/neurotech/micrologger.git"
+  "repository": "https://github.com/neurotech/micrologger.git",
+  "scripts": {
+    "test": "tape tests/**/*.js | node_modules/.bin/tap-spec"
+  },
+  "dependencies": {
+    "pg": "^6.1.4"
+  },
+  "devDependencies": {
+    "semistandard": "^10.0.0",
+    "tap-spec": "^4.1.1",
+    "tape": "^4.6.3"
+  }
 }
