--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "micrologger",
+  "name": "pg-micrologger",
   "version": "1.0.0",
   "description": "Route your log messages to a PostgreSQL database.",
   "main": "index.js",
   "author": "Tim Douglas <neurotech@gmail.com>",
   "license": "MIT",
-  "repository": "https://github.com/neurotech/micrologger.git",
+  "repository": "https://github.com/neurotech/pg-micrologger.git",
   "scripts": {
     "test": "tape tests/**/*.js | node_modules/.bin/tap-spec"
   },
