--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "repository": "https://github.com/neurotech/pg-micrologger.git",
   "scripts": {
-    "test": "tape tests/**/*.js | node_modules/.bin/tap-spec"
+    "test": "tape tests/**/*.js | tap-spec"
   },
   "dependencies": {
     "pg": "^6.1.4"
